--- a/book/index.html
+++ b/book/index.html
@@ -137,15 +137,120 @@
 
     </div>
 
-
-
-
-
-
-
-
-
 </header>
+
+<main>
+
+    <div class="main1">
+
+        <div class="main1-header">
+              <h2>Author’s Book Includes</h2>
+              <img src="./image/Line.png" alt="line">
+        </div>
+
+        <div class="main1-boxs">
+
+            <div class="main1-box1">
+                <div>
+                    <img src="./image/book1.png" alt="book2">
+                </div>
+                <div>
+
+                    <h3>Atomic One’s</h3>
+                    <p>Many variations of passages of Lorem Ipsum willing araise  alteration in some form.</p>
+
+                    <div class="main1-dots">
+                        <div>
+                            <div class="m1-dot"></div>
+                            <div class="m1-dot-text">
+                                <h3>Pages:</h3>
+                                <p>586 Pages</p>
+                            </div>
+                        </div>
+
+                        <div>
+                            <div class="m1-dot"></div>
+                            <div class="m1-dot-text">
+                                <h3>Length:</h3>
+                                <p>10 Hours</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="main1-button">
+                        <a href="#">Order Today</a>
+                    </div>
+
+
+                </div>
+
+
+            </div>
+
+
+            <div class="main1-box2">
+
+                <div>
+                    <img src="./image/book1.png" alt="book2">
+                </div>
+                <div>
+
+                    <h3>The Dark Light</h3>
+                    <p>Many variations of passages of Lorem Ipsum willing araise  alteration in some form.</p>
+
+                    <div class="main1-dots">
+                        <div>
+                            <div class="m1-dot"></div>
+                            <div class="m1-dot-text">
+                                <h3>Pages:</h3>
+                                <p>586 Pages</p>
+                            </div>
+                        </div>
+
+                        <div>
+                            <div class="m1-dot"></div>
+                            <div class="m1-dot-text">
+                                <h3>Length:</h3>
+                                <p>10 Hours</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="main1-button">
+                        <a href="#">Order Today</a>
+                    </div>
+
+
+                </div>
+
+
+            </div>
+
+
+
+
+        </div>
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+</main>
    
 
 
