--- a/book/index.html
+++ b/book/index.html
@@ -145,7 +145,6 @@
 
         <div class="main1-header">
               <h2>Author’s Book Includes</h2>
-              <img src="./image/Line.png" alt="line">
         </div>
 
         <div class="main1-boxs">
@@ -154,13 +153,17 @@
                 <div>
                     <img src="./image/book1.png" alt="book2">
                 </div>
-                <div>
 
-                    <h3>Atomic One’s</h3>
-                    <p>Many variations of passages of Lorem Ipsum willing araise  alteration in some form.</p>
+                <div class="main1-all1">
+
+                    <div class="main1-h3-p">
+                         <h3>Atomic One’s</h3>
+                         <p>Many variations of passages of Lorem Ipsum willing araise  alteration in some form.</p>
+
+                     </div>
 
                     <div class="main1-dots">
-                        <div>
+                        <div class="m1-dot1">
                             <div class="m1-dot"></div>
                             <div class="m1-dot-text">
                                 <h3>Pages:</h3>
@@ -168,7 +171,7 @@
                             </div>
                         </div>
 
-                        <div>
+                        <div class="m1-dot2">
                             <div class="m1-dot"></div>
                             <div class="m1-dot-text">
                                 <h3>Length:</h3>
@@ -193,15 +196,18 @@
             <div class="main1-box2">
 
                 <div>
-                    <img src="./image/book1.png" alt="book2">
+                    <img src="./image/Book.png" alt="book2">
                 </div>
-                <div>
+                <div class="main1-all">
 
-                    <h3>The Dark Light</h3>
-                    <p>Many variations of passages of Lorem Ipsum willing araise  alteration in some form.</p>
+                    <div class="main1-h3-p">
+                          <h3>The Dark Light</h3>
+                          <p>Many variations of passages of Lorem Ipsum willing araise  alteration in some form.</p>
+                    </div>
+
 
                     <div class="main1-dots">
-                        <div>
+                        <div class="m1-dot1">
                             <div class="m1-dot"></div>
                             <div class="m1-dot-text">
                                 <h3>Pages:</h3>
@@ -209,7 +215,7 @@
                             </div>
                         </div>
 
-                        <div>
+                        <div class="m1-dot2">
                             <div class="m1-dot"></div>
                             <div class="m1-dot-text">
                                 <h3>Length:</h3>
