--- a/book/index.html
+++ b/book/index.html
@@ -196,7 +196,7 @@
             <div class="main1-box2">
 
                 <div>
-                    <img src="./image/Book.png" alt="book2">
+                    <img src="./image/books.png" alt="book2">
                 </div>
                 <div class="main1-all">
 
